# ocr_agent

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
agent/: tools.py
agents/: extractors.py  tools.py  vision_llm.py
assets/: audit-excel.xlsx  ocr.pptx
ocr_types/: agent_type.py
output/: audit-excel.txt  bryan-adams-cloud-9.txt  bryan-adams-summer-of-69.txt  cursive_writing.txt  hand-written.txt  ocr.txt  watch.txt
tests/: test_main.py  test_tools.py
