[project]
name = "ocr-agent"
version = "0.1.0"
description = "OCR Agent is an agentic tool implemented in langraph to extract text from any media including pdf, images etc and even it can detect hand written text"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]
