[project]
name = "ocr-agent"
version = "0.1.0"
description = "OCR Agent is an agentic tool implemented in LangGraph to extract text from images, PDFs, and handwritten media."
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "black>=25.11.0",
    "pre-commit>=3.3.3",
    "pytest>=7.4.0",
    "ruff>=0.15.11",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
